@@ -1,5 +1,12 @@
 2016-05-26  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* entry.c: Follow the move of clk_gpio_init*.c
+	* example-cdc/sys.c: Likewise.
+	* example-led/sys.c: Likewise.  Update to 3.0. 
+	* example-primer2/sys.c: Update.
+
+	* mcu/clk_gpio_init-stm32.c: Moved.
+	* mcu/clk_gpio_init-kl.c: Moved.
 	* mcu/kl_sim.h: New (was in example-fs-bb48).
 
 	* example-fs-bb48/adc_kl27z.c: Use DMA0 and DMA1.
